--- a/index.html
+++ b/index.html
@@ -294,18 +294,18 @@
       <img src="David_Martinez.jpg" alt="David Martinez" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
       <h3>David Martinez</h3>
       <p><strong>Lead Developer</strong></p>
-      <p>Crafting immersive 3D and web experiences with finesse.</p>
+      <p>Crafting immersive 3D and web experiences.</p>
     </div>
     <div class="card team-card" data-link="https://esai-gamboa.vercel.app/">
       <img src="Esai_Gamboa.jpg" alt="Esai Gamboa" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
       <h3>Esai Gamboa</h3>
-      <p><strong>Developer</strong></p>
-      <p>Frontend expert focused on clean, responsive interfaces.</p>
+      <p><strong>Financial Specialist</strong></p>
+      <p>Linux Expert and Cheif Financial Officer. </p>
     </div>
     <div class="card team-card" data-link="https://brandon-adolfo.vercel.app/">
       <img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
       <h3>Brandon Adolfo</h3>
-      <p><strong>Developer</strong></p>
+      <p><strong>Junior Developer</strong></p>
       <p>Cross-platform mobile builder with an eye for design.</p>
     </div>
     <div class="card team-card" data-link="https://3dvr-mark-wells.vercel.app/">
