--- a/index.html
+++ b/index.html
@@ -243,12 +243,13 @@
 
   <a class="sticky-cta" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank">Subscribe</a>
 
-  <section class="hero">
+ <a href="https://portal.3dvr.tech" style="text-decoration: none; color: inherit;">
+  <section class="hero" style="cursor: pointer;">
     <img src="3DVR.png" alt="3dvr.tech logo" />
     <h2>Build the Future</h2>
     <p>Open-source tech for digital nomads, creators, and explorers.</p>
   </section>
-
+</a>
   
 <section id="subscribe" style="background: var(--bg-subscribe);">
   <h2>Choose Your Plan</h2>
