--- a/index.html
+++ b/index.html
@@ -347,8 +347,17 @@
   </section>
 
   <footer style="background: #111; color: #aaa; text-align: center; padding: 2rem 1rem; font-size: 0.95rem;">
-    <p>&copy; 2025 <a href="https://3dvr.tech" target="_blank" style="color: var(--accent);">3dvr.tech</a> — Open Source. Open Future.</p>
-  </footer>
+  <p>
+    &copy; 2025 <a href="https://3dvr.tech" target="_blank" style="color: var(--accent);">3dvr.tech</a> —
+    Open Source. Open Future.
+  </p>
+  <p>
+    <a href="https://github.com/tmsteph/3dvr-web" target="_blank" style="color: var(--accent); text-decoration: none;">
+      ✏️ Edit this page on GitHub
+    </a>
+  </p>
+</footer>
+
 
   <script>
     const toggle = document.getElementById('mobileMenuToggle');
